loadup-gitops-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadup-gitops-app
  labels:
    app: loadup-gitops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadup-gitops-app
  template:
    metadata:
      labels:
        app: loadup-gitops-app
    spec:
      containers:
      - name: app
        image: petrpliska/loadup-gitops-app:0.2.0 
        imagePullPolicy: Always
        ports:
        - containerPort: 80
