loadup-gitops-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadup-gitops-app
spec:
  type: ClusterIP
  selector:
    app: loadup-gitops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
