loadup-gitops-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loadup-gitops-app
  annotations:
    # cert-manager.io/cluster-issuer: loadup-tech
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #     - gitops.loadup.tech
  #   secretName: gitops-loadup-tech
  rules:
  # - host: loadup.codasip.xyz
  - host: gitops.loadup.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loadup-gitops-app
            port:
              number: 80
